hard-gists/19154831c2049a69e8d53dea8cf3e744/run.log
=== Docker Run Log for 19154831c2049a69e8d53dea8cf3e744 ===
Started at: Mi 29. Okt 12:34:05 CET 2025

[2025-10-29 12:34:06] START: Running container for 19154831c2049a69e8d53dea8cf3e744
[2025-10-29 12:34:06] SUCCESS: Container f27854365039a1744465cb15d9c9ecd9ef25fb785658c918b1419a1314bd3f53 started for 19154831c2049a69e8d53dea8cf3e744
=== Container logs for 19154831c2049a69e8d53dea8cf3e744 ===
  File "/snippet.py", line 614
    input = Variable(x.cuda(async=True))
                            ^^^^^
SyntaxError: invalid syntax
=== End of logs for 19154831c2049a69e8d53dea8cf3e744 ===
[2025-10-29 12:34:08] INFO: Container f27854365039a1744465cb15d9c9ecd9ef25fb785658c918b1419a1314bd3f53 has stopped
